midpoint-live-demo/base/kubernetes-objects/ldap/ldap.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: demo-ldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-ldap
  template:
    metadata:
      labels:
        app: demo-ldap
    spec:
      volumes:
        - name: ldap-conf
          emptyDir: {}
        - name: ldap-data
          emptyDir: {}
        - name: custom-init-base
          configMap:
            name: ldap-init-map
            defaultMode: 256
        - name: dynschema
          configMap:
            name: ldap-dynschema-map
            defaultMode: 256
      containers:
        - name: phpldapadmin
          image: 'osixia/phpldapadmin:0.9.0'
          ports:
            - name: ldap-admin-port
              containerPort: 1389
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
        - name: ldap
          image: 'osixia/openldap:1.5.0'
          command:
            - /container/tool/run
          args:
            - '--copy-service'
          ports:
            - name: ldap
              containerPort: 389
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: ldap-conf
              mountPath: /etc/ldap/slapd.d
            - name: ldap-data
              mountPath: /var/lib/ldap
            - name: custom-init-base
              mountPath: /container/service/slapd/assets/config/bootstrap/ldif/custom/
            - name: dynschema
              mountPath: >-
                /container/service/slapd/assets/config/bootstrap/schema/dyngroup.schema
              subPath: dyngroup.schema
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  serviceName: demo-service
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
